--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/FE-star/exercise2#readme",
   "devDependencies": {
+    "mocha": "^3.5.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "should": "^11.2.1"
   }
 }
