--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,13 @@ node_js:
   - "6"
 before_install:
   - npm install -g mocha
+  - npm install -g istanbul
 
 
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+
+  after_script:
+  - npm run cove  
